fix spacing

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -412,6 +412,7 @@ h5.eyebrow {
           font-size: 18px;
           line-height: 140%;
           letter-spacing: 0%;
+          margin: 16px 0 24px;
           @media (min-width: 974px) {
             height: 98px;
           }
